--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "scripts": {
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "cypress:run:chrome": "cypress run --browser chrome --headless"
-  },
-  "devDependencies": {
-    "cypress": "^7.0.1"
-  }
+    "scripts": {
+        "cypress:open": "cypress open",
+        "cypress:run": "cypress run",
+        "cypress:run:chrome": "cypress run --browser chrome --headless"
+    },
+    "devDependencies": {
+        "cypress": "^7.0.1",
+        "cypress-cucumber-preprocessor": "^4.3.1"
+    },
+    "dependencies": {
+        "cypress-xpath": "^1.6.2"
+    },
+    "cypress-cucumber-preprocessor": {
+        "step_definitions": "cypress/support/step_definitions/"
+    }
 }
